--- a/src/style/homepage.scss
+++ b/src/style/homepage.scss
@@ -1,12 +1,16 @@
-.homepage-wrapper {
+.page-wrapper {
     display: flex;
     flex-direction: column;
-
-    h1 {
-        font-size: 30px;
-    }
-
-    .nav-link {
-        font-size: 20px;
+    background-image: url("../../static/assets/images/prayer-journal-facebook.jpg");
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+    .homepage-wrapper {
+        // background-image: url("../../static/assets/images/prayer-journal-facebook.jpg");
+        width: 100vw;
+        height: 100vh;
+        
     }
 }
