--- a/src/style/homepage.scss
+++ b/src/style/homepage.scss
@@ -2,15 +2,44 @@
     display: flex;
     flex-direction: column;
     background-image: url("../../static/assets/images/prayer-journal-facebook.jpg");
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     
     .homepage-wrapper {
         // background-image: url("../../static/assets/images/prayer-journal-facebook.jpg");
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
+        color: whitesmoke;
+        
+        // display: flex;
+        // flex-direction: column;
+        // align-items: center;
+        // text-align: right;
+        // margin-top: 80px;
+        // margin-right: 50px;
+        
+
+        .text-wrapper {
+            font-family: 'Dancing Script', cursive;
+            font-size: 50px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+            align-content: flex-end;
+            // text-align: right;
+            // justify-content: right;
+            .quote-wrapper {
+                display: fle;
+            }
+        }
+        .signup-wrapper {
+            // display: flex;
+            text-align: center;
+        }
         
     }
 }
