--- a/src/style/navbar.scss
+++ b/src/style/navbar.scss
@@ -3,14 +3,15 @@
     flex-direction: row;
     justify-content: space-between;
     color: white;
+    font-family: 'Balsamiq Sans', cursive;
+    width: 100vw;
 
     .signed-in-wrapper {
         color: white;
-        width: 50vw;
         height: 80px;
         display: flex;
         align-items: center;
-        text-align: left;
+        padding-left: 30px;
         
     }
     
@@ -19,10 +20,10 @@
         flex-direction: row;
         justify-content: space-between;
         height: 80px;
-        width: 50vw;
         color: white;
         background-color: transparent;
         text-align: center;
+        padding-right: 30px;
         
             // button {
             //     width: 100px;
@@ -58,14 +59,13 @@
             display: flex;
             height: 100%;
             align-items: center;
-            color: black;
             justify-content: space-around;
             text-decoration: none;
             
 
             .nav-link {
                 display: flex;
-                color: black;
+                color: white;
                 height: 100%;
                 width: 100%;
                 padding-right: 20px;
@@ -74,16 +74,17 @@
                 justify-content: center;
                 text-align: center;
                 text-decoration: transparent;
-
+                font-family: 'Balsamiq Sans', cursive;
                 
             }
 
             :hover {
-                background-color: gray;
+                // background-color: gray;
                 color: black;
                 transition: ease-in .5s;
                 transition: ease-out .5s;
                 text-decoration: underline;
+                
             }
             
         }
