--- a/src/style/input-page.scss
+++ b/src/style/input-page.scss
@@ -1,46 +1,51 @@
-.form-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    form {
-        width: 70vw;
-        height: 800px;
-        h1 {
-            display: flex;
-            justify-content: center;
-        }
-        .input-wrapper {
-            input {
-                height: 30px;
-                width: 70vw; 
-                border-radius: 5px;
-            }
-            button {
-                height: 40px;
-                width: 80px;
-                font-size: 20px;
-            }
-        }
-        .textarea-wrapper {
-            textarea {
-                height: 200px;
-                width: 70vw;
-                border-radius: 5px;
-            }
-        }
-        .add-entry-button {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            button {
-                height: 40px;
-                width: 150px;
-                font-size: 25px;
-                cursor: pointer;
+.page-wrapper {
+    .form-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
+        form { 
+            width: 70vw;
+            height: 100%;
+            color: whitesmoke;
+            h1 {
+                display: flex;
+                justify-content: center;
                 
+            }
+            .input-wrapper {
+                input {
+                    height: 30px;
+                    width: 70vw; 
+                    border-radius: 5px;
+                }
+                button {
+                    height: 40px;
+                    width: 80px;
+                    font-size: 20px;
+                }
+            }
+            .textarea-wrapper {
+                textarea {
+                    height: 200px;
+                    width: 70vw;
+                    border-radius: 5px;
+                }
+            }
+            .add-entry-button {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                button {
+                    height: 40px;
+                    width: 150px;
+                    font-size: 25px;
+                    cursor: pointer;
+                    
 
+                }
             }
         }
-    }
+        }
     }
