--- a/src/style/view-journal-entry.scss
+++ b/src/style/view-journal-entry.scss
@@ -1,14 +1,33 @@
 .page-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    
+    // color: white;
+    .entry-wrapper {
+        font-size: 18px;
+        height: 300px;
+        width: 80vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: white;
+    
+        .title {
+            text-align: center;
+            font-size: 40px;
+        }
+
+        .date-and-location {
+            text-align: center;
+            font-size: 20px;
+            margin-top: 5px;
+        }
+        .people {
+            text-align: center;
+            font-size: 25px;
+        }
+        .description {
+            font-size: 22px;
+        }
+    }
 }
 
-.entry-wrapper {
-    font-size: 18px;
-    height: 300px;
-    width: 80vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
