--- a/src/style/navbar.scss
+++ b/src/style/navbar.scss
@@ -2,9 +2,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     color: white;
     font-family: 'Balsamiq Sans', cursive;
     width: 100vw;
+    height: 120px;
 
     .signed-in-wrapper {
         color: white;
